# invofi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: 01-introduction.md  02-architecture.md  03-smart-contract.md  04-frontend.md  05-authentication.md  06-supabase.md  07-deployment.md  08-environment-variables.md  09-contributing.md  10-roadmap.md  README.md
invofi/: docker-compose.yml
invofi/apps/contracts/: Cargo.toml  lib.rs  rust-toolchain.toml
invofi/apps/contracts/.cargo/: config.toml
invofi/apps/frontend/: .env.local.example  next.config.ts  package.json
invofi/apps/frontend/src/app/: layout.tsx  page.tsx
invofi/apps/frontend/src/app/portfolio/: page.tsx
invofi/apps/frontend/src/lib/: contract.ts  freighter.ts  horizon.ts  supabase.ts
invofi/apps/frontend/src/utils/supabase/: middleware.ts  server.ts
scripts/: close-issues.sh
vaultlink/: README.md  docker-compose.yml
vaultlink/apps/backend/: .dockerignore  .env  config.module.js  config.module.js.map  config.module.ts  configuration.js  configuration.js.map  configuration.ts  database.module.js  database.module.js.map  database.module.ts  invoices.service.spec.js  invoices.service.spec.js.map  invoices.service.spec.ts  jest-integration.json  jest-unit.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  user.entity.d.ts  user.entity.js  user.entity.js.map  user.entity.ts  users.controller.ts  users.module.js.map  users.service.js  users.service.js.map  users.service.spec.js.map  users.service.spec.ts  users.service.ts
vaultlink/apps/backend/src/: app.module.ts  config.module.ts  configuration.ts  database.module.ts  main.ts
vaultlink/apps/backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  local.strategy.ts
vaultlink/apps/backend/src/auth/dto/: connect-wallet.dto.ts  create-invoice.dto.ts  invoice.entity.ts  invoices.controller.ts  invoices.module.ts  invoices.service.ts  register.dto.ts  stellar.service.ts
vaultlink/apps/backend/src/common/: common.module.ts  stellar.service.ts
vaultlink/apps/backend/src/financing/: financing-offer.entity.ts  financing.controller.ts  financing.module.ts  financing.service.ts
vaultlink/apps/backend/src/financing/dto/: create-financing.dto.ts
vaultlink/apps/backend/src/invoice/: invoice.controller.ts  invoice.entity.ts  invoice.module.ts  invoice.service.ts  invoices.service.spec.ts
vaultlink/apps/backend/src/transaction/: transaction.entity.ts  transaction.service.ts
vaultlink/apps/backend/src/user/: user.controller.ts  user.entity.ts  user.service.ts  users.service.spec.ts
vaultlink/apps/contracts/: Cargo.toml  lib.rs  test.rs
vaultlink/apps/contracts/vaultlink-core/: Cargo.toml
vaultlink/apps/contracts/vaultlink-core/src/: lib.rs
(+2 files in other folders)
