[package]
name = "vaultlink-invoice-registry"
version = "0.1.0"
edition = "2021"
description = "Soroban contract for VaultLink invoice registry"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "20.0.0" # Use the latest stable version

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]