[package]
name = "vaultlink-invoice-registry"
version = "0.1.0"
edition = "2021"
description = "Soroban contract for VaultLink invoice registry"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[workspace]
members = [
    "vaultlink-core",
]

[workspace.dependencies]
soroban-sdk = "20.0.0"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]