[package]
name = "vaultlink-core"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["VaultLink Team"]

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }