[package]
name = "vaultlink-core"
version = "0.1.0"
edition = "2021"
description = "Soroban contract for VaultLink core logic"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]